fix: user-profile z-index 🥲

--- a/frontend/src/app/my-profile/my-profile.component.css
+++ b/frontend/src/app/my-profile/my-profile.component.css
@@ -18,7 +18,6 @@
   border-bottom-left-radius: 25px;
   overflow: hidden;
   position: relative;
-  z-index: 999;
 }
 
 .main-content-container {
